<resources>
    <string name="app_name">"6th Sense "</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="call">Call</string>
    <string name="logout">Logout</string>
    <string name="none">None</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>

    <string name="title_activity_loading">LoadingActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
