<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="40dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:textColor="#FFFFFF"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textColorHint="#cccccc">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#ffff"
            android:drawableLeft="@drawable/ic_person_outline_white_24dp"
            android:drawableStart="@drawable/ic_person_outline_white_24dp"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textColor="#cccccc"
            android:textSize="20sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColorHint="#cccccc">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#ffff"
            android:drawableStart="@drawable/ic_lock_white_24dp"
            android:drawableLeft="@drawable/ic_lock_white_24dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="#cccccc"
            android:textSize="20sp" />
    </android.support.design.widget.TextInputLayout>
<LinearLayout
    android:layout_marginTop="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/not_registered"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="Not Registered?"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/forgot_password"
        android:textColor="#ffffff"
        android:textSize="16sp" />

</LinearLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="#79a209df"
        android:text="@string/log_in"
        android:textColor="#cccccc"
        android:foreground="@drawable/ripple"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="or"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

</LinearLayout>